--- a/doc/coverletter.tex
+++ b/doc/coverletter.tex
@@ -45,8 +45,8 @@
 	\opening{Dear Dr. Kammen and Co-Editors,}
 
 
-	I am writing to submit our manuscript entitled ```how unprecedented was the February 2021 Texas cold snap?'' for consideration to Environmental Research Letters.
-
+	I am writing to submit our manuscript entitled ``How unprecedented was the February 2021 Texas cold snap?'' for consideration for publication in Environmental Research Letters.
+	​
 	In light of the recent cold snap that caused cascading infrastructure failures in Texas, we sought to understand the extent to which the temperatures were unprecedented in the historical record.
 	We have tried to do some rapid yet rigorous work.
 	Specifically, we deploy an empirical methodology to assess whether the February 2021 temperatures had precedent in the historical record.
@@ -58,14 +58,14 @@
 		\item design and operation of interdependent critical infrastructure should consider the full distribution of climate hazard, not merely the most recent events.
 	\end{enumerate}
 	As the Texas state legislature and other regulatory bodies investigate the causes of this event with an eye to preventing future disasters, a credible assessment of the degree to which these temperatures could have been anticipated offers a significant and relevant contribution to public and scientific discourse.
-
+	​
 	Our findings also have implications for the broader literature around electrification and decarbonization.
 	Deep decarbonization is critical to avoiding severe climate change scenarios.
-	\citet{williams_decarbonization:2012} argue, as others have done, that widespread electrification is needed to achieve decarbonization
+	\citet{williams_decarbonization:2012} argue, as others have done, that widespread electrification is needed to achieve decarbonization.
 	More recently, \citet{waite_heating:2020} quantified the load effects of electrifying U.S. residential and commercial space heating using ten years of weather data.
-	Their analysis indicated that most regions of Texas could expand up to 70 to 100\% electric heating without impacting local peak annual load, which generally occurs during the summer cooling season.
-	This recent cold snap indicates that Texas may be closer to experiencing peak electricity loads during the winter than we had previously anticipated.
-	Our results suggest that electrification of building heating could increase peak electricity demands, requiring some combination of increased generation, storage, and/or long-distance transmission to achieve the high reliability levels that are typically considered acceptable.
+	Their analysis indicated that most regions of Texas could expand to up to 70 to 100\% electric heating without impacting local peak annual load, which generally occurs during the summer cooling season.
+	However, this recent cold snap indicates that Texas may be closer to experiencing peak electricity loads during the winter than we had previously anticipated.
+	Our results suggest that even small increases in space heating electrification in Texas could increase peak electricity demands, requiring some combination of increased generation, storage, and/or long-distance transmission.
 
 	Each named author has substantially contributed to conducting the underlying research and drafting this manuscript.
 	Additionally, to the best of our knowledge, the named authors have no conflict of interest, financial or otherwise.
